basic idea afgemaakt, aan alledrie gewerkt

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -13,7 +13,7 @@ On the surface, the last pattern cannot be distinguished from a language that do
 }
 I show in this chapter that one of these logically possible patterns is not attested in any natural language.
 
-In this dissertation I discuss languages of which headless relatives have been described in the literature. As I write about case competition, I only focus on languages that morphologically distinguish between case, specifically the nominative, the accusative and the dative. By no means do I claim that my language sample is representative for the languages of the world. However, they build on independently established facts, which are the case scale from Chapter \ref{ch:recurring} and the subset requirement of the external head, to be discussed in Chapter \ref{ch:relativization}. Therefore, I predict that my generalizations hold for all natural languages.
+In this dissertation I discuss languages of which headless relatives have been described in the literature. As I write about case competition, I only focus on languages that morphologically distinguish between case, specifically the nominative, the accusative and the dative. By no means do I claim that my language sample is representative for the languages of the world. However, they build on independently established facts, which are the case scale from Chapter \ref{ch:recurring} and the subset requirement of the external head, to be discussed in Chapter \ref{part:deriving}. Therefore, I predict that my generalizations hold for all natural languages.
 
 The next section introduces the patterns that are logically possible with case competition. In Section \ref{sec:pattern-i} to Section \ref{sec:pattern-iv}, I discuss the patterns one by one, and I give examples when the pattern is attested. In Section \ref{sec:without-case-competition}, I make a sidestep to languages that do not show any case competition, and I give a typology of headless relatives.
 
@@ -1208,11 +1208,11 @@ Figure \ref{fig:attested-headless-relatives-case-competition} shows a diagram th
 The first parameter is whether or not a language allows for a mismatch between the internal and external case.
 If a language does not allow for a mismatch, the matching type of language \ref{ex:matching} is generated.
 If a language allows for a mismatch between the internal and external case, the second parameter comes into play. This one is concerned with the case the relative pronoun is allowed to surface when it wins the case competition. Here I give two options: (1) it is allowed to surface in only the internal case or (2) it is allowed to surface in the internal and the external case.\footnote{
-I do not introduce the option of allowing the relative pronoun to surface only in the external case. The reason for this is that this pattern is not attested crosslinguistically. If a language like this appears, this option could in principle be added. However, I predict that it will not appear. In Chapter \ref{ch:relativization}, I show how it follows from general properties of relative clauses that this type of language is excluded.
+I do not introduce the option of allowing the relative pronoun to surface only in the external case. The reason for this is that this pattern is not attested crosslinguistically. If a language like this appears, this option could in principle be added. However, I predict that it will not appear. In Chapter \ref{part:deriving}, I show how it follows from general properties of relative clauses that this type of language is excluded.
 }
 If a language allows the internal case to surface when it wins the case competition, the `unrestricted --- internal-only' type is generated.
 If a language allows the internal and the external case to surface, the unrestricted type is generated.\footnote{
-The matching type could also have been generated with the second parameter. The text along the arrow would have been \tit{none}. I choose to not do this, because in Chapter \ref{ch:relativization} I propose separate mechanisms for each of the parameters in Figure \ref{fig:attested-headless-relatives-case-competition}. The first one distinguishes matching languages from unrestricted (i.e. unrestricted and internal-only) languages, and the second one distinguishes unrestricted from internal-only languages.
+The matching type could also have been generated with the second parameter. The text along the arrow would have been \tit{none}. I choose to not do this, because in Chapter \ref{part:deriving} I propose separate mechanisms for each of the parameters in Figure \ref{fig:attested-headless-relatives-case-competition}. The first one distinguishes matching languages from unrestricted (i.e. unrestricted and internal-only) languages, and the second one distinguishes unrestricted from internal-only languages.
 }
 
 \begin{figure}[ht]
@@ -1246,4 +1246,4 @@ The matching type could also have been generated with the second parameter. The 
     \label{fig:attested-headless-relatives-case-competition}
 \end{figure}
 
-The main focus of Chapter \ref{ch:relativization} is the linguistic counterpart of the second parameter. I show with general properties of relative clauses how the difference between the unrestricted and the `unrestricted --- internal-only' type can be modeled, and how the exclusion of the `unrestricted --- external-only' type follows from these particular properties. I also introduce a linguistic counterpart for the first parameter, which distinguishes matching from unrestricted languages.
+The main focus of Chapter \ref{part:deriving} is the linguistic counterpart of the second parameter. I show with general properties of relative clauses how the difference between the unrestricted and the `unrestricted --- internal-only' type can be modeled, and how the exclusion of the `unrestricted --- external-only' type follows from these particular properties. I also introduce a linguistic counterpart for the first parameter, which distinguishes matching from unrestricted languages.
