--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -1061,11 +1061,11 @@ label={below left:\tit{e:l}}]{};
 The lexical entry in \ref{ex:khanty-el-lexicon} can only match the syntactic structure if \ac{nom}P moves away, leaving the \ac{acc}P containing \ac{f}2 behind. In other words, the syntactic structure needs to be modified in such a way that the complement of \ac{f}2 is not in the way anymore.
 
 Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax.\footnote{
-In Chapter \ref{ch:relativization} I introduce the spellout procedure in more detail.
+In Chapter \ref{part:deriving} I introduce the spellout procedure in more detail.
 } I showed in Section \ref{sec:syncretism} that lexical entries are matched using the Superset Principle and the Elsewhere Condition. If there is no match in the lexicon for a particular syntactic structure, two types of (evacuation) movement can take place, in a fixed order.\footnote{
 The two types of movement are cyclic movement and snowball movement, also used to derive the possible orders in \tsc{Dem} > \tsc{Num} > \tsc{Adj} > \tsc{N} \citep{cinque2005}.}
 The movement types change the syntactic structure in such a way that they generate new constituents that are possible matches for spellout.\footnote{
-This type of movement is different from syntactic movement. It is driven by spellout, it does not have any interpretational effects, and it does not leave any traces \citep{starke2018}. In Chapter \ref{ch:relativization} I return to `regular' syntactic movement in Nanosyntax.
+This type of movement is different from syntactic movement. It is driven by spellout, it does not have any interpretational effects, and it does not leave any traces \citep{starke2018}. In Chapter \ref{part:deriving} I return to `regular' syntactic movement in Nanosyntax.
 }
 For the discussion in this section, only the second type of movement is relevant: complement movement. In this type of movement, the complement of a particular feature moves to the specifier of that same feature.
 
@@ -1251,7 +1251,7 @@ I repeat the summary of the data pattern for Gothic in Table \ref{tbl:summary-go
 
 The intuition is the following. The headless relatives reflect the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. A case wins the competition if it contains all features the other case has. The dative contains all features that the accusative has, so the dative surfaces. Similarly, the dative contains all features the nominative has, and again the dative surfaces. The same holds for the last pair: the accusative contains all features the nominative has, so the accusative surfaces. I illustrate this per case pair.
 
-I start with the competition between dative and accusative, in which dative wins. The corresponding cells are marked dark gray in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:dat-contains-acc} I show the syntactic structure of a dative relative pronoun. For now I let syntactic structure that has to do with being a relative pronoun correspond to a complex XP. I elaborate on the exact content of XP in Chapter \ref{ch:relativization}.
+I start with the competition between dative and accusative, in which dative wins. The corresponding cells are marked dark gray in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:dat-contains-acc} I show the syntactic structure of a dative relative pronoun. For now I let syntactic structure that has to do with being a relative pronoun correspond to a complex XP. I elaborate on the exact content of XP in Chapter \ref{part:deriving}.
 Following that, a dative relative pronoun contains the XP, \ac{f}1, \ac{f}2 and \ac{f}3.
 Contained in this structure is an accusative relative pronoun, marked in gray. This consists of the XP, \ac{f}1 and \ac{f}2.
 The bigger structure wins against the smaller structure it contains: the dative wins over the accusative.
