--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -12,6 +12,7 @@
 \usepackage{cancel}
 \usepackage{enumerate}
 \usepackage{setspace}
+\usepackage{adjustbox}
 
 %%%SPACING/BREAKING%%%
 \OnehalfSpacing*
