--- a/larger-syntax.tex
+++ b/larger-syntax.tex
@@ -30,7 +30,7 @@ The fourth column gives the example of the language type that I discuss in this 
 A language of the unrestricted type (like Old High German) allows both the internal case and the external case to surface when either of them wins the case competition. Either the light head with its external case or the relative pronoun with its internal case can be the surface pronoun.
 A language of the internal-only type (like Modern German) allows only the internal case to surface when it wins the case competition, and it does not allow the external case to do so. The relative pronoun with its internal case can be the surface pronoun and the light head with its external case cannot.
 A language of the matching type (like Polish) allows neither the internal nor the external case to surface when either of them wins the case competition. Neither the relative pronoun with its internal case nor the light head with its external case can be the surface pronoun.\footnote{
-This holds for the situation in which the internal and external case differ. In Section \ref{sec:deriving-matching}, I show that the relative pronoun surfaces in matching contexts.
+This holds for the situation in which the internal and external case differ. In Section \ref{ch:deriving-matching}, I show that the relative pronoun surfaces in matching contexts.
 }
 The language type that is not attested is the external-only type. That means that there is no language that allows only the external case to surface when it wins the case competition, and it does not allow the internal case to do so. In other words, there exist no language, in which the surface pronoun can only be the light head and not the relative pronoun.
 
@@ -76,7 +76,67 @@ Reformulating these parameters is not just restating the generalization in diffe
 
 
 
-\section{Aside: a larger syntactic context}\label{sec:larger-syntax}
+\chapter{Aside: a larger syntactic context}\label{ch:larger-syntax}
+
+First, I show, independent from case facts, that the surface pronoun is the relative pronoun. The evidence comes from extraposition data.
+
+The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose a CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. It can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
+
+\ex.\label{ex:mg-extrapose-cp}
+\ag. Mir ist \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht} egal.\\
+1\tsc{sg}.\tsc{dat} is how it 2\tsc{sg}.\tsc{dat} goes {the same}\\
+`I don't care how you are doing.'\label{ex:mg-extrapose-cp-base}
+\bg. Mir is egal \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht}.\\
+1\tsc{sg}.\tsc{dat} is {the same} how it 2\tsc{sg}.\tsc{dat} goes\\
+`I don't care how you are doing.' \label{ex:mg-extrapose-cp-moved}\flushfill{Modern German}
+
+\ref{ex:mg-extrapose-dp} illustrates that it is impossible to extrapose a DP. The clausal object of \ref{ex:mg-extrapose-cp} is replaced by the simplex noun phrase \tit{die Sache} `that matter'.
+In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base position. In \ref{ex:mg-extrapose-dp-moved} it is extraposed, and the sentence is no longer grammatical.
+
+\ex.\label{ex:mg-extrapose-dp}
+\ag. Mir ist \tbf{die} \tbf{Sache} egal.\\
+1\tsc{sg}.\tsc{dat} is that matter {the same}\\
+`I don't care about that matter.'\label{ex:mg-extrapose-dp-base}
+\bg. *Mir ist egal \tbf{die} \tbf{Sache}.\\
+1\tsc{sg}.\tsc{dat} is {the same} that matter\\
+`I don't care about that matter.' \label{ex:mg-extrapose-dp-moved}\flushfill{Modern German}
+
+The same asymmetry between CPs and DPs can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gekocht hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.\footnote{
+Not all speakers of Modern German accept the combination of \tit{das} as a light head and \tit{was} as a relative pronoun and prefer \tit{das} as a relative pronoun instead. I use the combination of \tit{das} and \tit{was} to have a more minimal pair with the headless relatives (that uses the relative pronoun \tit{was}).
+\label{ftn:das-was}
+}
+In \ref{ex:extra-headed-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headed-only-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headed-head-clause}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
+
+\ex.\label{ex:extra-headed}
+\ag. Jan hat das, \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}, aufgegessen.\\
+Jan has that what he cooked has eaten\\
+`Jan has eaten what he cooked.'\label{ex:extra-headed-base}
+\bg. Jan hat das aufgegessen, \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+Jan has that eaten what he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headed-only-clause}
+\cg. *Jan hat aufgegessen, das, \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+Jan has eaten that what he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headed-head-clause} \flushfill{Modern German}
+
+The same can be observed in relative clauses without a head. \ref{ex:extra-headless} is the same sentence as in \ref{ex:extra-headed} only without the overt head. The relative clause is marked in bold again.
+In \ref{ex:extra-headless-base}, the relative clause appears in base position. In \ref{ex:extra-headless-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headless-no-rel}, the relative clause is extraposed without the relative pronouns. This is ungrammatical, because the relative pronoun is part of the CP.
+This shows that the relative pronoun in headless relatives in Modern German are necessarily part of a CP, which is here a relative clause.
+
+\ex.\label{ex:extra-headless}
+\ag. Jan hat \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat} aufgegessen.\\
+Jan has what he cooked has eaten\\
+`Jan has eaten what he cooked.'\label{ex:extra-headless-base}
+\bg. Jan hat aufgegessen \tbf{was} \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+Jan has eaten what he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headless-clause}
+\bg. *Jan hat \tbf{was} aufgegessen \tbf{er} \tbf{gekocht} \tbf{hat}.\\
+Jan has what eaten he cooked has\\
+`Jan has eaten what he cooked.'\label{ex:extra-headless-no-rel}\flushfill{Modern German}
+
+In conclusion, extraposition facts show that the surface pronoun in Modern German headless relatives is the relative pronoun.
+
+
+
 
 If you talk about different patterns, there can be different locations to put your parameters. Himmelreich put her parameters in the structure. I put my parameters in the elements themselves. I show what an analysis like Himmelreich looks like, and I show then that it is difficult to reduce that then to differences in the lexicon (because it has to do with agree?).
 
