--- a/thesis.tex
+++ b/thesis.tex
@@ -1,12 +1,10 @@
 \documentclass[11pt,hidelinks]{memoir}
 
-\includeonly{constituent-containment}
+\includeonly{deriving-internalonly}
 
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
 \usepackage{fenna-files/abbreviations}
-
-\usepackage{adjustbox}
 
 \begin{document}
 
@@ -85,7 +83,7 @@ thanks
 \include{case-competition-typology}
 \include{languages-without-case-competition}
 
-\part{Deriving the typology}
+\part{Deriving the typology}\label{part:deriving}
 \include{constituent-containment}
 \include{deriving-internalonly}
 \include{deriving-matching}
