--- a/discussing-unrestricted.tex
+++ b/discussing-unrestricted.tex
@@ -2,7 +2,7 @@
 
 \chapter{Discussing the unrestricted type}\label{ch:discussing-unrestricted}
 
-Languages of the unrestricted type can be summarizes as in Table \ref{tbl:overview-rel-light-ohg}.
+Languages of the unrestricted type can be summarizes as in Table \ref{tbl:rel-lh-ohg}.
 
 \begin{table}[htbp]
   \center
@@ -16,7 +16,7 @@ Languages of the unrestricted type can be summarizes as in Table \ref{tbl:overvi
 \tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & \tsc{lh}\scsub{ext}      \\
 \bottomrule
 \end{tabular}
-\label{tbl:overview-rel-light-ohg}
+\label{tbl:rel-lh-ohg}
 \end{table}
 
 When the internal and the external case match, and there is a tie, the relative pronoun surfaces in the this particular case (just like in all other language types).
@@ -24,18 +24,18 @@ When the internal case wins the case competition, this type of language allows t
 When the external case wins the case competition, this type of language allows also the external case to surface. This means that the light head with a more complex external case can also be the surface pronoun.
 
 The situation in which the unrestricted type of language differs from the internal-only type is the one in which the external case wins the case competition. This is ungrammatical in the internal-only type of language but it is grammatical in the unrestricted type of language.
-In Chapter \ref{ch:constituent-containment}, I suggested that this difference can be derived from a difference in spellout between the two languages types. The difference lies in whether the light head and the relative pronoun correspond to the same lexical entry or not.
+In Chapter \ref{ch:constituent-containment}, I suggested that this difference can be derived from a difference in spellout between the two languages types. The difference lies in whether non-case part of the light head and the relative pronoun correspond to the same lexical entry or not.
 
-In the internal-only type of language, the feature \tsc{rel} is spelled out separately from the ϕP, by its own lexical entry, as I showed is Chapter \ref{ch:deriving-onlyinternal}. In the unrestricted type of language, the feature \tsc{rel} is spelled out by a lexical entry that contains the ϕP. Moreover, the \tsc{rel}P and the ϕP are syncretic: there is not a more specific lexical entry for the ϕP (without the feature \tsc{rel}). I show this in Figure \ref{fig:rel-lh-unres-derive}.
+In the internal-only type of language, the feature \tsc{rel} is spelled out separately from the ϕP, by its own lexical entry, as I showed is Chapter \ref{ch:deriving-onlyinternal}. In the unrestricted type of language, the feature \tsc{rel} is spelled out by a lexical entry that contains the ϕP. Moreover, the \tsc{rel}P and the ϕP are syncretic: there is not a more specific lexical entry for the ϕP (without the feature \tsc{rel}). I show this in Figure \ref{fig:rel-lh-unrest-syn-rep}.
 
 \begin{figure}[htbp]
   \center
   \begin{tabular}[b]{ccc}
-    \toprule
-    light head & & relative pronoun \\
-    \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-    \begin{forest} boom
-      [\tsc{k}P
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+      [\tsc{k}P,
           [\tsc{k}]
           [ϕP,
           tikz={
@@ -44,11 +44,11 @@ In the internal-only type of language, the feature \tsc{rel} is spelled out sepa
           scale=0.8,
           fit to=tree]{};
           }
-              [\phantom{x}ϕ\phantom{x}, roof, baseline]
+              [ϕ, baseline]
           ]
       ]
-    \end{forest}
-    & \phantom{x} &
+      \end{forest}
+      & \phantom{x} &
     \begin{forest} boom
       [\tsc{k}P
           [\tsc{k}]
@@ -56,79 +56,27 @@ In the internal-only type of language, the feature \tsc{rel} is spelled out sepa
           tikz={
           \node[label=below:\tit{α},
           draw,circle,
-          scale=0.8,
+          scale=0.85,
           fit to=tree]{};
           }
               [\tsc{rel}]
               [ϕP
-                  [\phantom{x}ϕ\phantom{x}, roof, baseline]
+                  [ϕ, baseline]
               ]
           ]
       ]
     \end{forest}\\
-    \bottomrule
+      \bottomrule
   \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the unrestricted type}
-  \label{fig:rel-lh-unres-derive}
+   \caption {\tsc{lh} and \tsc{rp} in the unrestricted type (repeated)}
+  \label{fig:rel-lh-unrest-syn-rep}
 \end{figure}
 
 When the internal and the external case match, the relative pronoun can delete the light head, because the light head forms a single constituent within the relative pronoun.
 When the internal case is more complex than the external case, the relative pronoun can still delete the light head, because it still forms a constituent within the relative pronoun.
 When the external case is more complex than the internal case, the light head can delete the relative pronoun. The relative pronoun does not form a constituent within the light head, but the features that the light head lacks are contained in the lexical entry that the light head corresponds to. I suggest that this syncretism is also enough to license the deletion of the relative pronoun.
 
-In Chapter \ref{ch:constituent-containment}, I suggested that the difference in structures between the internal-only type and the unrestricted type is a consequence of spellout.
-
-
-
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-    \toprule
-    light head & & relative pronoun \\
-    \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-    \begin{forest} boom
-      [\tsc{k}P,
-      tikz={
-      \node[
-      draw,circle,
-      scale=0.8,
-      fit to=tree]{};
-      }
-          [\tsc{k}]
-          [ϕP
-              [\phantom{x}ϕ\phantom{x}, roof, baseline]
-          ]
-      ]
-    \end{forest}
-    & \phantom{x} &
-    \begin{forest} boom
-      [\tsc{k}P,
-      tikz={
-      \node[
-      draw,circle,
-      scale=0.8,
-      fit to=tree]{};
-      }
-          [\tsc{k}]
-          [\tsc{rel}P
-              [\tsc{rel}]
-              [ϕP
-                  [\phantom{x}ϕ\phantom{x}, roof, baseline]
-              ]
-          ]
-      ]
-    \end{forest}\\
-    \bottomrule
-  \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in hypothetical language}
-  \label{fig:rel-lh-unres-derive}
-\end{figure}
-
-
-
-
-
-The change in constituency is a result of the fact that case projections correspond to their own morpheme in matching languages and they are spelled out together with phi-features in internal-only languages. In Chapter \ref{ch:deriving-matching}, I showed that Modern German indeed has a portmanteau for case and phi-features. In this Chapter, I show that Polish has two morphemes that corresponds to case and phi-features.
+--make the connection to ohg--
 
 I give a compact version of the Old High German light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
 
@@ -213,10 +161,12 @@ I give a compact version of the Old High German light heads and relative pronoun
   \end{tabular}
   \end{adjustbox}
    \caption {\tsc{lh} and \tsc{rp} in Old High German}
-  \label{fig:rel-lh-pol}
+  \label{fig:rel-lh-ohg}
 \end{figure}
 
-In what follows, I compare the light head and the relative pronoun in Figure \ref{fig:rel-lh-pol} to the light head and the relative pronoun in Figure \ref{fig:rel-lh-matching}.
+give here the differences between ohg and mg.
+
+In what follows, I compare the light head and the relative pronoun in Figure \ref{fig:rel-lh-ohg} to the light head and the relative pronoun in Figure \ref{fig:rel-lh-unrest-syn-rep}.
 
 Consider the light head in Figure \ref{fig:rel-lh-pol}.
 Light heads in Polish are spelled out by two morphemes, which are both circled. The morpheme on the right does not only correspond to case features, but also to number feature (\tsc{ind}). The remainder of what corresponds to the ϕP is the morpheme on the left (\tsc{an}P).
@@ -228,6 +178,7 @@ Relative pronouns in Polish contain one more morpheme than light heads: the \tsc
 Crucially, the constituency in Figure \ref{fig:rel-lh-mg} is the same as it is in Figure \ref{fig:rel-lh-intonly}. In this chapter, I take the features that are contained in the Modern German relative pronouns and light heads. I motivate that these features form the constituents shown in Figure \ref{fig:rel-lh-pol}.
 
 The section is structured as follows.
+
 First, I discuss the relative pronoun. According to my assumptions in Section \ref{ch:constituent-containment}, relative pronouns are part of the relative clause. I confirm this independently for Modern German with data from extraposition. I decompose the relative pronouns into the three morphemes I showed in Figure \ref{fig:rel-lh-mg}, and I show which features each of the morphemes corresponds to.
 Then I discuss the light head. I argue that Modern German headless relatives are derived from a type of light-headed relative clause that does not surface in the language. I show that the features of the light head are spread over two morphemes (the \tsc{a}P and \tsc{k}P in Figure \ref{fig:rel-lh-mg}).
 
@@ -240,13 +191,10 @@ Finally, I compare the constituents of the light head and the relative pronoun. 
 The section is structured as follows.
 Old High German differs from the other two languages I discussed in that its headless relatives have a different interpretation: they have a individuating or definite reading. This leads me to argue for slightly different functional sequences in Old High German.
 I argue that Old High German headless relatives are derived from regular light-headed relatives.
-I decompose the light heads and relative pronouns intro smaller morphemes, and I show which features each of the morphemes corresponds to.
-Then I compare the constituents of the light head and the relative pronoun.
-When the internal and the external case match, the relative pronoun can delete the light head, because it contains all its constituents.
-When the internal case is more complex than the external case, the relative pronoun can still delete the light head, for the same reason: the relative pronoun contains all constituents of the light head.
-The situation becomes a bit more complicated when the external case is more complex than the internal case. The light head does not contain all constituents of the relative pronoun. However, the constituent that is not contained in a constituent of the light head is syncretic with a constituent of the light head. I suggest that this syncretism is also enough to license the deletion of the relative pronoun.
-Finally, I show that the effect of syncretism is not limited to Old High German and the part of the light head and relative pronoun that does not involve case. I give examples from Modern German that show that syncretism can also license the deletion of a more complex case by a less complex case.
 
+
+ohg is derived from an existing light-headed relative
+and has multiple constituent deletion
 
 
 \section{The relative pronoun}
@@ -473,7 +421,7 @@ not: `and he replied to whoever spoke to him'
   `Isn't this now the one, who you seek to kill?'\label{ex:ohg-double}
 
  The difference between a light-headed relative and a headless relative is that in headless relatives, either the internal or the external is absent. The absent element is the one that has the least complex case. This shows the presence of two elements in Old High German is optional.\footnote{
- This sharply contrasts with headless relatives in Modern German, which are always ungrammatical when both the internal and external elements surface. I come back to this in Section \ref{sec:deriving-only-internal}.
+ This sharply contrasts with headless relatives in Modern German, which are always ungrammatical when both the internal and external elements surface. I come back to this in Chapter \ref{ch:deriving-onlyint}.
  }
  In Old High German, there are three possible constructions: the internal and external element can both surface, only the internal element can surface and only the external element can surface. If only one of the two elements surfaces, this is the element that bears the most complex case, which is either the internal or the external one, as I have shown in Chapter \ref{ch:typology}. I assume that whether both or only one of the elements surfaces is determined by information structure. In \ref{ex:ohg-double}, the external element \tit{thér} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the candidate to be absent. However, it seems plausible that this is emphasized in this sentence and that it, therefore, cannot be absent.
 
